# fastapi-templatekit

./: .coveragerc  .dockerignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
api/: __init__.py  router.py
deployment/: Dockerfile
fastapi_template/: cli.py
fastapi_template/commands/: addhealthprobes.py  help.py  project.py  rendering.py  startapp.py  startproject.py  validation.py
fastapi_template/templates/app/: router.py.tpl  schemas.py.tpl  service.py.tpl
fastapi_template/templates/app/endpoints/: api.py.tpl
fastapi_template/templates/app/service/: app_service.py.tpl
fastapi_template/templates/app/websocket/: router.py.tpl
fastapi_template/templates/healthprobes/: router.py.tpl
fastapi_template/templates/healthprobes/endpoints/: api.py.tpl
fastapi_template/templates/healthprobes/schemas/: validator.py.tpl
fastapi_template/templates/healthprobes/service/: healthprobes_service.py.tpl
fastapi_template/templates/project/: README.md.tpl  fastapi_template.toml.tpl  gitignore.tpl  pyproject.toml.tpl
fastapi_template/templates/project/package/: cli.py.tpl  main.py.tpl
fastapi_template/templates/project/package/api/: router.py.tpl
fastapi_templatekit/: cli.py
fastapi_templatekit/commands/: addhealthprobes.py  help.py  project.py  rendering.py  startapp.py  startproject.py
fastapi_templatekit/templates/app/schemas/: validator.py.tpl
fastapi_templatekit/templates/project/: env.example.tpl  fastapi_templatekit.toml.tpl
fastapi_templatekit/templates/project/package/: cli.py.tpl  config.py.tpl
health/: __init__.py
main/: app.py  config.py
tests/: test_commands.py  test_startapp.py  test_startproject.py
