[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-templatekit"
version = "0.1.1"
description = "FastAPI project generator with a root-level, Django-style app layout"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
fastapi-templatekit = "fastapi_templatekit.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["fastapi_templatekit*"]

[tool.setuptools.package-data]
fastapi_templatekit = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "-v",
    "--color=yes",
    "--capture=no",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=fastapi_templatekit",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "unit: marks unit tests (fast)",
    "integration: marks integration tests (slower, may hit DB or network)",
    "functional: marks end-to-end or workflow tests",
    "slow: marks tests that take longer to run",
    "smoke: marks basic smoke sanity tests",
]

[tool.coverage.run]
source = ["fastapi_templatekit"]
relative_files = true
omit = [
    "venv/*",
    "*/__init__.py",
]

[tool.coverage.report]
omit = [
    "venv/*",
    "*/__init__.py",
]
